correct spacing in nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
   }
 
 body {
@@ -21,9 +22,10 @@ header {
 
 header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
+    
 }
   
 header a {
@@ -48,7 +50,7 @@ header nav ul {
 }*/
 
 header nav ul li a {
-    padding: 10 15px;
+    padding: 10px 15px;
     font-weight: lighter;
     /* changing font-size value from 22px to 1.55 vw */
     font-size: 1.55vw;
@@ -58,7 +60,9 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
-
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
@@ -66,9 +70,7 @@ footer h2 {
     color: #024e76;
     font-size: 30px;
     margin: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    
 }
 
 footer div {
@@ -253,9 +255,10 @@ section {
 
 .trainer {
     margin: 20px;
+    flex: 1;
     background: #024e76;
     color: #fce138;
-    flex: 1;
+    
 }
 
 .trainer img {
@@ -281,13 +284,6 @@ section {
     font-size: 17px;
 }
 
-.text-left {
-    text-align: left;
-}
-  
-.text-right {
-    text-align: right;
-}
 
 /* REACH OUT STYLES START */
 .contact {
@@ -356,6 +352,14 @@ section {
   
   /* REACH OUT STYLES END */
 
+/* Utilities*/
+.text-left {
+    text-align: left;
+}
+  
+.text-right {
+    text-align: right;
+}
 .flex-row {
     display: flex;
 }
